tests/tslib_syntax/tslib_syntax.exp
Error ---------------------------------------------------------------------------- anonymous_default_export_usage.js:6:1

Cannot cast `f(...)` to number because string [1] is incompatible with number [2]. [incompatible-type]

   anonymous_default_export_usage.js:6:1
   6| f("hello") as number; // ERROR - string is not number
      ^^^^^^^^^^

References:
   anonymous_default_export_usage.js:6:3
   6| f("hello") as number; // ERROR - string is not number
        ^^^^^^^ [1]
   anonymous_default_export_usage.js:6:15
   6| f("hello") as number; // ERROR - string is not number
                    ^^^^^^ [2]


Error ---------------------------------------------------------------------------- anonymous_default_export_usage.js:7:1

Cannot cast `f(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   anonymous_default_export_usage.js:7:1
   7| f(42) as string; // ERROR - number is not string
      ^^^^^

References:
   anonymous_default_export_usage.js:7:3
   7| f(42) as string; // ERROR - number is not string
        ^^ [1]
   anonymous_default_export_usage.js:7:10
   7| f(42) as string; // ERROR - number is not string
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:24:1

Cannot cast `s` to string literal `bar` because string literal `foo` [1] is incompatible with string literal `bar` [2].
[incompatible-type]

   declare_var_extras.js:24:1
   24| s as 'bar'; // ERROR - 'foo' !== 'bar'
       ^

References:
   declare_var_extras.js:2:19
    2| declare const s = 'foo';
                         ^^^^^ [1]
   declare_var_extras.js:24:6
   24| s as 'bar'; // ERROR - 'foo' !== 'bar'
            ^^^^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:25:1

Cannot cast `n` to number literal `20` because number literal `10` [1] is incompatible with number literal `20` [2].
[incompatible-type]

   declare_var_extras.js:25:1
   25| n as 20; // ERROR - 10 !== 20
       ^

References:
   declare_var_extras.js:3:19
    3| declare const n = 10;
                         ^^ [1]
   declare_var_extras.js:25:6
   25| n as 20; // ERROR - 10 !== 20
            ^^ [2]


Error --------------------------------------------------------------------------------------- declare_var_extras.js:26:1

Cannot cast `bi` to bigint literal `200n` because bigint literal `100n` [1] is incompatible with bigint literal
`200n` [2]. [incompatible-type]

   declare_var_extras.js:26:1
   26| bi as 200n; // ERROR - 100n !== 200n
       ^^

References:
   declare_var_extras.js:5:20
    5| declare const bi = 100n;
                          ^^^^ [1]
   declare_var_extras.js:26:7
   26| bi as 200n; // ERROR - 100n !== 200n
             ^^^^ [2]


Error -------------------------------------------------------------------------------------- declare_var_extras.js:30:27

`declare` variable declarations cannot have both a type annotation and an initializer. [unsupported-syntax]

   30| declare const e: string = 'hello'; // ERROR
                                 ^^^^^^^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:33:19

Initializer in a `declare` variable must be a literal (string, number, bigint, or boolean). [unsupported-syntax]

   33| declare const f = 1 + 2; // ERROR
                         ^^^^^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:36:15

`declare` variable declarations require a type annotation or a literal initializer. [unsupported-syntax]

   36| declare const h; // ERROR
                     ^


Error -------------------------------------------------------------------------------------- declare_var_extras.js:39:15

Destructuring is not supported in `declare` variable declarations. [unsupported-syntax]

   39| declare const [g] = 'foo'; // ERROR
                     ^^^


Error ------------------------------------------------------------------------- destructuring_function_type_usage.js:6:1

Cannot cast `f(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:6:1
   6| f({a: 1, b: "hello"}) as string; // ERROR
      ^^^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:2:60
   2| export declare function f({a, b}: {a: number, b: string}): number;
                                                                 ^^^^^^ [1]
   destructuring_function_type_usage.js:6:26
   6| f({a: 1, b: "hello"}) as string; // ERROR
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:10:1

Cannot cast `g(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:10:1
   10| g({a: 1}) as string; // ERROR
       ^^^^^^^^^

References:
   destructuring_function_type.d.ts:4:49
    4| export declare function g({a: b}: {a: number}): number;
                                                       ^^^^^^ [1]
   destructuring_function_type_usage.js:10:14
   10| g({a: 1}) as string; // ERROR
                    ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:14:1

Cannot cast `h(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:14:1
   14| h([1, "hello"]) as string; // ERROR
       ^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:6:54
    6| export declare function h([a, b]: [number, string]): number;
                                                            ^^^^^^ [1]
   destructuring_function_type_usage.js:14:20
   14| h([1, "hello"]) as string; // ERROR
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:18:1

Cannot cast `nested(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:18:1
   18| nested({a: {b: 1}}) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:8:61
    8| export declare function nested({a: {b}}: {a: {b: number}}): number;
                                                                   ^^^^^^ [1]
   destructuring_function_type_usage.js:18:24
   18| nested({a: {b: 1}}) as string; // ERROR
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:22:1

Cannot cast `rest(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:22:1
   22| rest({a: 1, c: "hello", d: true}) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:10:78
   10| export declare function rest({a, ...b}: {a: number, c: string, d: boolean}): number;
                                                                                    ^^^^^^ [1]
   destructuring_function_type_usage.js:22:38
   22| rest({a: 1, c: "hello", d: true}) as string; // ERROR
                                            ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:27:1

Cannot cast `optObj(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:27:1
   27| optObj({a: 1}) as string; // ERROR
       ^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:12:52
   12| export declare function optObj({a}?: {a: number}): number;
                                                          ^^^^^^ [1]
   destructuring_function_type_usage.js:27:19
   27| optObj({a: 1}) as string; // ERROR
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:32:1

Cannot cast `optArr(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:32:1
   32| optArr([1]) as string; // ERROR
       ^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:14:49
   14| export declare function optArr([a]?: [number]): number;
                                                       ^^^^^^ [1]
   destructuring_function_type_usage.js:32:16
   32| optArr([1]) as string; // ERROR
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:37:1

Cannot cast `c.m(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:37:1
   37| c.m({a: 1, b: "hello"}) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:17:38
   17|   m({a, b}: {a: number, b: string}): number;
                                            ^^^^^^ [1]
   destructuring_function_type_usage.js:37:28
   37| c.m({a: 1, b: "hello"}) as string; // ERROR
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:39:1

Cannot cast `c.n(...)` to number because string [1] is incompatible with number [2]. [incompatible-type]

   destructuring_function_type_usage.js:39:1
   39| c.n([1]) as number; // ERROR
       ^^^^^^^^

References:
   destructuring_function_type.d.ts:18:21
   18|   n([a]: [number]): string;
                           ^^^^^^ [1]
   destructuring_function_type_usage.js:39:13
   39| c.n([1]) as number; // ERROR
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:42:1

Cannot cast `c.o(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:42:1
   42| c.o({a: 1}) as string; // ERROR
       ^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:19:25
   19|   o({a}?: {a: number}): number;
                               ^^^^^^ [1]
   destructuring_function_type_usage.js:42:16
   42| c.o({a: 1}) as string; // ERROR
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:47:1

Cannot cast `i.m(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:47:1
   47| i.m({a: 1, b: "hello"}) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:23:38
   23|   m({a, b}: {a: number, b: string}): number;
                                            ^^^^^^ [1]
   destructuring_function_type_usage.js:47:28
   47| i.m({a: 1, b: "hello"}) as string; // ERROR
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:49:1

Cannot cast `i.n(...)` to number because string [1] is incompatible with number [2]. [incompatible-type]

   destructuring_function_type_usage.js:49:1
   49| i.n([1]) as number; // ERROR
       ^^^^^^^^

References:
   destructuring_function_type.d.ts:24:21
   24|   n([a]: [number]): string;
                           ^^^^^^ [1]
   destructuring_function_type_usage.js:49:13
   49| i.n([1]) as number; // ERROR
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:53:1

Cannot cast `restArr(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:53:1
   53| restArr(1, "hello") as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:27:63
   27| export declare function restArr(...[a, b]: [number, string]): number;
                                                                     ^^^^^^ [1]
   destructuring_function_type_usage.js:53:24
   53| restArr(1, "hello") as string; // ERROR
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:58:1

Cannot cast `arrowObj(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:58:1
   58| arrowObj({a: 1, b: "hello"}) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:29:68
   29| export type ArrowDestructObj = ({a, b}: {a: number, b: string}) => number;
                                                                          ^^^^^^ [1]
   destructuring_function_type_usage.js:58:33
   58| arrowObj({a: 1, b: "hello"}) as string; // ERROR
                                       ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:62:1

Cannot cast `arrowArr(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:62:1
   62| arrowArr([1, "hello"]) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:30:62
   30| export type ArrowDestructArr = ([a, b]: [number, string]) => number;
                                                                    ^^^^^^ [1]
   destructuring_function_type_usage.js:62:27
   62| arrowArr([1, "hello"]) as string; // ERROR
                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------ destructuring_function_type_usage.js:66:1

Cannot cast `arrowRename(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   destructuring_function_type_usage.js:66:1
   66| arrowRename({x: 1}) as string; // ERROR
       ^^^^^^^^^^^^^^^^^^^

References:
   destructuring_function_type.d.ts:31:61
   31| export type ArrowDestructRename = ({x: x1}: {x: number}) => number;
                                                                   ^^^^^^ [1]
   destructuring_function_type_usage.js:66:24
   66| arrowRename({x: 1}) as string; // ERROR
                              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------- generic_tagged_template.js:4:1

Cannot cast template string to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   generic_tagged_template.js:4:1
   4| tag<number>`hello` as empty; // ERROR
      ^^^^^^^^^^^^^^^^^^

References:
   generic_tagged_template.js:4:5
   4| tag<number>`hello` as empty; // ERROR
          ^^^^^^ [1]
   generic_tagged_template.js:4:23
   4| tag<number>`hello` as empty; // ERROR
                            ^^^^^ [2]


Error ----------------------------------------------------------------------------------- mapped_type_variance_op.js:7:5

Cannot assign `3` to `pro.foo` because property `foo` is not writable. [cannot-write]

   7| pro.foo = 3; // ERROR - writing to +readonly property
          ^^^


Error ---------------------------------------------------------------------------------- mapped_type_variance_op.js:26:6

Cannot assign `3` to `pror.foo` because property `foo` is not writable. [cannot-write]

   26| pror.foo = 3; // ERROR - writing to readonly property
            ^^^


Error --------------------------------------------------------------------------------- mapped_type_variance_op.js:31:21

Cannot instantiate `MutableFromWO` because an index signature declaring the expected key / value type is not readable.
[cannot-read]

   31| declare const mfwo: MutableFromWO<WriteOnlyO>; // ERROR - input props are not readable
                           ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- mapped_type_variance_op.js:32:6

Cannot get `mfwo.foo` because property `foo` is not readable. [cannot-read]

   32| mfwo.foo as number; // ERROR - still writeonly, can't read
            ^^^


Error ---------------------------------------------------------------------------------- optional_class_property.js:10:1

Cannot cast `foo.a` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   optional_class_property.js:10:1
   10| foo.a as empty; // ERROR
       ^^^^^

References:
   optional_class_property.js:2:7
    2|   a?: string;
             ^^^^^^ [1]
   optional_class_property.js:10:10
   10| foo.a as empty; // ERROR
                ^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional_class_property.js:10:1

Cannot cast `foo.a` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   optional_class_property.js:10:1
   10| foo.a as empty; // ERROR
       ^^^^^

References:
   optional_class_property.js:2:7
    2|   a?: string;
             ^^^^^^ [1]
   optional_class_property.js:10:10
   10| foo.a as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------ optional_indexer.js:3:1

Cannot cast `t["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:3:1
   3| t["foo"] as number; // ERROR - undefined is not number
      ^^^^^^^^

References:
   optional_indexer.js:1:22
   1| type T = {[string]?: number};
                           ^^^^^^ [1]
   optional_indexer.js:3:13
   3| t["foo"] as number; // ERROR - undefined is not number
                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ optional_indexer.js:7:1

Cannot cast `s["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:7:1
   7| s["foo"] as number; // ERROR - undefined is not number
      ^^^^^^^^

References:
   optional_indexer.js:5:31
   5| type S = {readonly [string]?: number};
                                    ^^^^^^ [1]
   optional_indexer.js:7:13
   7| s["foo"] as number; // ERROR - undefined is not number
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- optional_indexer.js:13:1

Cannot cast `c["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:13:1
   13| c["foo"] as number; // ERROR - undefined is not number
       ^^^^^^^^

References:
   optional_indexer.js:10:14
   10|   [string]?: number;
                    ^^^^^^ [1]
   optional_indexer.js:13:13
   13| c["foo"] as number; // ERROR - undefined is not number
                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- optional_indexer.js:19:1

Cannot cast `i["foo"]` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional_indexer.js:19:1
   19| i["foo"] as number; // ERROR - undefined is not number
       ^^^^^^^^

References:
   optional_indexer.js:16:14
   16|   [string]?: number;
                    ^^^^^^ [1]
   optional_indexer.js:19:13
   19| i["foo"] as number; // ERROR - undefined is not number
                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional_unlabeled_tuple.js:7:6

Cannot cast array literal to `T` because in index `1`: number [1] is incompatible with string [2]. [incompatible-type]

   optional_unlabeled_tuple.js:7:6
   7| ['', 1] as T; // ERROR - number incompatible with string
           ^ [1]

References:
   optional_unlabeled_tuple.js:2:19
   2| type T = [string, string?];
                        ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:15:5

Cannot cast array literal to `S` because in index `1`: string [1] is incompatible with number [2]. [incompatible-type]

   optional_unlabeled_tuple.js:15:5
   15| [1, ''] as S; // ERROR
           ^^ [1]

References:
   optional_unlabeled_tuple.js:10:20
   10| type S = [number?, number?];
                          ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:23:2

Cannot cast array literal to `U` because in index `0`: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with number [3].

   optional_unlabeled_tuple.js:23:2
   23| [true] as U; // ERROR
        ^^^^ [1]

References:
   optional_unlabeled_tuple.js:18:11
   18| type U = [string | number?];
                 ^^^^^^ [2]
   optional_unlabeled_tuple.js:18:20
   18| type U = [string | number?];
                          ^^^^^^ [3]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:38:8

Cannot cast array literal to `Sp` because in index `2`: number [1] is incompatible with string [2]. [incompatible-type]

   optional_unlabeled_tuple.js:38:8
   38| [1, 2, 3] as Sp; // ERROR
              ^ [1]

References:
   optional_unlabeled_tuple.js:34:33
   34| type Sp = [...[number, number], string?];
                                       ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:45:2

Cannot cast array literal to `C` because in index `0`: string [1] is incompatible with number [2]. [incompatible-type]

   optional_unlabeled_tuple.js:45:2
   45| [''] as C<string>; // ERROR
        ^^ [1]

References:
   optional_unlabeled_tuple.js:41:33
   41| type C<T> = [T extends string ? number : boolean?];
                                       ^^^^^^ [2]


Error --------------------------------------------------------------------------------- optional_unlabeled_tuple.js:52:2

Cannot cast array literal to `W` because in index `0`: number [1] is incompatible with string [2]. [incompatible-type]

   optional_unlabeled_tuple.js:52:2
   52| [1] as W; // ERROR
        ^ [1]

References:
   optional_unlabeled_tuple.js:49:11
   49| type W = [Alias?];
                 ^^^^^ [2]


Error -------------------------------------------------------------------------------- optional_unlabeled_tuple.js:55:16

Invalid tuple type [1], required tuple element [2] must be after optional tuple element [3].
[tuple-required-after-optional]

   optional_unlabeled_tuple.js:55:16
   55| type Invalid = [string?, number]; // ERROR
                      ^^^^^^^^^^^^^^^^^ [1]

References:
   optional_unlabeled_tuple.js:55:26
   55| type Invalid = [string?, number]; // ERROR
                                ^^^^^^ [2]
   optional_unlabeled_tuple.js:55:17
   55| type Invalid = [string?, number]; // ERROR
                       ^^^^^^^ [3]


Error --------------------------------------------------------------------------------------- private_class_field.js:8:3

Cannot get `x.private` because property `private` is missing in `C` [1]. [prop-missing]

   private_class_field.js:8:3
   8| x.private; // ERROR
        ^^^^^^^

References:
   private_class_field.js:6:18
   6| declare const x: C;
                       ^ [1]


Error -------------------------------------------------------------------------------- type_keyword_dotted_access.js:7:1

Cannot cast `x` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   type_keyword_dotted_access.js:7:1
   7| x as empty; // ERROR
      ^

References:
   type_keyword_dotted_access.js:5:18
   5| declare const x: N.infer;
                       ^^^^^^^ [1]
   type_keyword_dotted_access.js:7:6
   7| x as empty; // ERROR
           ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- typeof_this.js:15:1

Cannot cast `obj.method()` to empty because `MyClass` [1] is incompatible with empty [2]. [incompatible-type]

   typeof_this.js:15:1
   15| obj.method() as empty; // ERROR
       ^^^^^^^^^^^^

References:
   typeof_this.js:5:13
    5|   method(): typeof this {
                   ^^^^^^^^^^^ [1]
   typeof_this.js:15:17
   15| obj.method() as empty; // ERROR
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- typeof_this.js:16:1

Cannot cast `obj.getX()` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   typeof_this.js:16:1
   16| obj.getX() as empty; // ERROR
       ^^^^^^^^^^

References:
   typeof_this.js:9:11
    9|   getX(): typeof this.x {
                 ^^^^^^^^^^^^^ [1]
   typeof_this.js:16:15
   16| obj.getX() as empty; // ERROR
                     ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- unique_symbol.js:8:1

Cannot cast `x` to empty because unique symbol [1] is incompatible with empty [2]. [incompatible-type]

   unique_symbol.js:8:1
   8| x as empty;            // ERROR
      ^

References:
   unique_symbol.js:1:18
   1| declare const x: unique symbol;
                       ^^^^^^^^^^^^^ [1]
   unique_symbol.js:8:6
   8| x as empty;            // ERROR
           ^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:12:1

Cannot cast `s` to `typeof x` because symbol [1] is incompatible with unique symbol [2]. [incompatible-type]

   unique_symbol.js:12:1
   12| s as typeof x;  // ERROR - symbol doesn't flow to unique symbol
       ^

References:
   unique_symbol.js:11:18
   11| declare const s: symbol;
                        ^^^^^^ [1]
   unique_symbol.js:12:6
   12| s as typeof x;  // ERROR - symbol doesn't flow to unique symbol
            ^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:15:1

Cannot cast `y` to `typeof x` because unique symbol [1] is incompatible with unique symbol [2]. [incompatible-type]

   unique_symbol.js:15:1
   15| y as typeof x;         // ERROR - different unique symbols are incompatible
       ^

References:
   unique_symbol.js:2:18
    2| declare const y: unique symbol;
                        ^^^^^^^^^^^^^ [1]
   unique_symbol.js:15:6
   15| y as typeof x;         // ERROR - different unique symbols are incompatible
            ^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:40:8

Cannot call `takesX` with `y` bound to `s` because unique symbol [1] is incompatible with unique symbol [2].
[incompatible-type]

   unique_symbol.js:40:8
   40| takesX(y);      // ERROR - different unique symbol
              ^

References:
   unique_symbol.js:2:18
    2| declare const y: unique symbol;
                        ^^^^^^^^^^^^^ [1]
   unique_symbol.js:37:28
   37| declare function takesX(s: typeof x): void;
                                  ^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:45:1

Cannot cast `a` to `typeof y` because unique symbol [1] is incompatible with unique symbol [2]. [incompatible-type]

   unique_symbol.js:45:1
   45| a as typeof y;  // ERROR
       ^

References:
   unique_symbol.js:43:18
   43| declare const a: typeof x;
                        ^^^^^^^^ [1]
   unique_symbol.js:45:6
   45| a as typeof y;  // ERROR
            ^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:48:1

Cannot cast `x` to string because unique symbol [1] is incompatible with string [2]. [incompatible-type]

   unique_symbol.js:48:1
   48| x as string; // ERROR
       ^

References:
   unique_symbol.js:1:18
    1| declare const x: unique symbol;
                        ^^^^^^^^^^^^^ [1]
   unique_symbol.js:48:6
   48| x as string; // ERROR
            ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:49:1

Cannot cast `x` to number because unique symbol [1] is incompatible with number [2]. [incompatible-type]

   unique_symbol.js:49:1
   49| x as number; // ERROR
       ^

References:
   unique_symbol.js:1:18
    1| declare const x: unique symbol;
                        ^^^^^^^^^^^^^ [1]
   unique_symbol.js:49:6
   49| x as number; // ERROR
            ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:50:1

Cannot cast `x` to boolean because unique symbol [1] is incompatible with boolean [2]. [incompatible-type]

   unique_symbol.js:50:1
   50| x as boolean; // ERROR
       ^

References:
   unique_symbol.js:1:18
    1| declare const x: unique symbol;
                        ^^^^^^^^^^^^^ [1]
   unique_symbol.js:50:6
   50| x as boolean; // ERROR
            ^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- unique_symbol.js:55:1

Cannot cast `m` to `typeof x` because `unknown` [1] is incompatible with unique symbol [2]. [incompatible-type]

   unique_symbol.js:55:1
   55| m as typeof x; // ERROR - mixed doesn't flow to unique symbol
       ^

References:
   unique_symbol.js:54:18
   54| declare const m: mixed;
                        ^^^^^ [1]
   unique_symbol.js:55:6
   55| m as typeof x; // ERROR - mixed doesn't flow to unique symbol
            ^^^^^^^^ [2]



Found 56 errors
